AX: Size of web view in Safari as reported by AX changes when adding/removing bars is wrong https://bugs.webkit.org/show_bug.cgi?id=136756

Reviewed by Beth Dakin.

Source/WebCore:

topContentInset not only seems to push the scroll view's origin down, but it also shrinks its height as well, which
was not accounted for in the original fix.

Modified: platform/mac-wk2/accessibility/content-inset-scrollview-frame.html

* accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::elementRect):

LayoutTests:

* platform/mac-wk2/accessibility/content-inset-scrollview-frame-expected.txt:
* platform/mac-wk2/accessibility/content-inset-scrollview-frame.html:


Canonical link: https://commits.webkit.org/154586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173548 268f45cc-cd09-0410-ab3c-d52691b4dbfc